--- a/01-working-with-kustomize/overlays/default/kustomization.yaml
+++ b/01-working-with-kustomize/overlays/default/kustomization.yaml
@@ -13,3 +13,6 @@ patchesJson6902:
       - op: replace
         path: /spec/replicas
         value: 6
+      - op: replace
+        path: /spec/template/spec/containers/0/image
+        value: quay.io/redhatworkshops/welcome-php:ffcd15
