--- a/argocd-apps/production/second-app.yaml
+++ b/argocd-apps/production/second-app.yaml
@@ -6,12 +6,12 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/your-repo/your-repo.git
+    repoURL: https://github.com/Kregq/kustomize.git
     targetRevision: main
     path: 01-working-with-kustomize/overlays/production
   destination:
     server: https://kubernetes.default.svc
-    namespace: second-app-production
+    namespace: kapp
   syncPolicy:
     automated:
       prune: true
